--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <h1>Rizki Nur Rohman</h1>
                 <p class="tagline">Memiliki ketertarikan di bidang Teknologi Informasi, khususnya dalam pengembangan sistem,<br>
                 serta siap berkontribusi dalam mendukung solusi digital yang efektif.</p>
-                <button class="btn-cv">
+                <a href="file/CV_Rizki Nur Rohman.pdf" download class="btn-cv">
                     <i class="bi bi-download"></i> Download CV
-                </button>
+                </a>
             </div>
         
             <div class="home-image">
