--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
             <div class="home-text">
                 <button class="intro-badge">Hello, I'm</button>
                 <h1>Rizki Nur Rohman</h1>
-                <p class="tagline">Memiliki ketertarikan di bidang Teknologi Informasi, khususnya dalam pengembangan sistem,<br>
-                serta siap berkontribusi dalam mendukung solusi digital yang efektif.</p>
-                <a href="file/CV_Rizki Nur Rohman.pdf" download class="btn-cv">
+                <p class="tagline">Portofolio saya berisi berbagai project pengembangan sistem informasi yang pernah saya kerjakan.</p>
+                <!-- <a href="file/CV_Rizki Nur Rohman.pdf" download class="btn-cv">
                     <i class="bi bi-download"></i> Download CV
-                </a>
+                </a> -->
             </div>
         
             <div class="home-image">
@@ -79,14 +78,10 @@
                 <!-- KONTEN -->
                 <div class="profil-konten">
                     <p class="profil-p">
-                        Lulusan D3 Manajemen Informatika dengan pengalaman magang dalam pengembangan sistem informasi.
-                        Berperan dalam proyek yang mencakup pengelolaan data, optimasi proses, dan pengembangan fitur
-                        untuk meningkatkan efisiensi operasional. Keahlian meliputi analisis sistem, perancangan database,
-                        automasi proses, dan implementasi berbagai fitur untuk mendukung kelancaran kerja sistem.
-                        Terbiasa bekerja kolaboratif dalam tim proyek, beradaptasi dengan teknologi baru,
-                        dan menyelesaikan tantangan teknis secara kreatif. Selalu antusias mempelajari tren terbaru
-                        dalam bidang Teknologi Informasi untuk diterapkan secara praktis dalam proyek.
-                        Berkomitmen menghadirkan solusi digital yang efektif dan mendukung tujuan perusahaan.
+                        Selama masa studi, saya terlibat dalam pengembangan sistem informasi yang mencakup pengelolaan data, optimasi proses,
+                        dan pembuatan fitur. Terbiasa melakukan analisis sistem, perancangan database, serta automasi proses sesuai kebutuhan.
+                        Mampu bekerja secara mandiri maupun dalam tim, cepat beradaptasi dengan teknologi baru, dan siap berkembang serta belajar bersama
+                        perusahaan untuk mendukung tujuan perusahaan.
                     </p>
 
                     <div class="collapse-item">
