--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="collapse-content">
                             <p>
                                 <strong>Kediri</strong><br>
-                                Jl. Imam Fakih Kandangan RT/RW 02/10, Kelurahan Kandangan, Kec. Kandangan,<br>
+                                Jl. Imam Fakih Kandangan RT/RW 02/10, Kelurahan Kandangan, Kec. Kandangan,
                                 Kab. Kediri, Provinsi Jawa Timur 64294
                             </p>
                         </div>
@@ -486,8 +486,8 @@
             </div>
         </section>
 
-        <footer>
-            © 2026 Rizki Nur Rohman
+        <footer id="footer">
+            © 2026 Rizki Nur Rohman — Crafted with passion.
         </footer>
     
     </div>
