--- a/project_3.html
+++ b/project_3.html
@@ -41,12 +41,11 @@
                     real-time.
                 </p>
 
-                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
-                <div class="d-flex flex-wrap gap-2">
-                    <span class="badge bg-dark">Figma</span>
-                    <span class="badge bg-dark">Android Studio</span>
-                    <span class="badge bg-dark">Kotlin</span>
-                </div>
+                <h4><i class="bi bi-check2-square me-2"></i>Jobdesk</h4>
+                <ul>
+                    <li>Mendesain UI/UX untuk fitur penimbangan pada aplikasi Android Bank Sampah Sri Wilis.</li>
+                    <li>Mengembangkan dan memperbaiki fitur penimbangan pada aplikasi Android menggunakan Kotlin.</li>
+                </ul>
 
             </div>
 
@@ -85,11 +84,27 @@
                     </button>
                 </div>
 
-                <h4><i class="bi bi-check2-square me-2"></i>Jobdesk</h4>
-                <ul>
-                    <li>Mendesain UI/UX untuk fitur penimbangan pada aplikasi Android Bank Sampah Sri Wilis.</li>
-                    <li>Mengembangkan dan memperbaiki fitur penimbangan pada aplikasi Android menggunakan Kotlin.</li>
-                </ul>
+                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
+                <div class="d-flex flex-wrap gap-2">
+                    <span class="badge bg-dark">Figma</span>
+                    <span class="badge bg-dark">Android Studio</span>
+                    <span class="badge bg-dark">Kotlin</span>
+                </div>
+
+                <!-- ===== LINK SECTION ===== -->
+                <!-- <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
+                <div class="d-flex flex-wrap gap-3">
+                    <a href="https://github.com/username/nama-repo" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-github"></i>
+                        GitHub
+                    </a>
+                    <a href="https://youtube.com/your-demo-video" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-play-circle"></i>
+                        Video Demo
+                    </a>
+                </div> -->
 
             </div>
 
