--- a/project_6.html
+++ b/project_6.html
@@ -44,18 +44,6 @@
                     serta pengambilan keputusan yang lebih tepat.
                 </p>
 
-                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
-                <div class="d-flex flex-wrap gap-2">
-                    <span class="badge bg-dark">Figma</span>
-                    <span class="badge bg-dark">VS Code</span>
-                    <span class="badge bg-dark">Bootstrap</span>
-                    <span class="badge bg-dark">Laravel</span>
-                    <span class="badge bg-dark">JavaScript</span>
-                    <span class="badge bg-dark">PHP</span>
-                    <span class="badge bg-dark">CSS</span>
-                    <span class="badge bg-dark">MySQL</span>
-                </div>
-
             </div>
 
             <!-- KOLOM KANAN -->
@@ -106,6 +94,33 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+
+                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
+                <div class="d-flex flex-wrap gap-2">
+                    <span class="badge bg-dark">Figma</span>
+                    <span class="badge bg-dark">VS Code</span>
+                    <span class="badge bg-dark">Bootstrap</span>
+                    <span class="badge bg-dark">Laravel</span>
+                    <span class="badge bg-dark">JavaScript</span>
+                    <span class="badge bg-dark">PHP</span>
+                    <span class="badge bg-dark">CSS</span>
+                    <span class="badge bg-dark">MySQL</span>
+                </div>
+
+                <!-- ===== LINK SECTION ===== -->
+                <!-- <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
+                <div class="d-flex flex-wrap gap-3">
+                    <a href="https://github.com/username/nama-repo" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-github"></i>
+                        GitHub
+                    </a>
+                    <a href="https://youtube.com/your-demo-video" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-play-circle"></i>
+                        Video Demo
+                    </a>
+                </div> -->
             </div>
 
         </div>
