--- a/project_1.html
+++ b/project_1.html
@@ -40,14 +40,14 @@
                     real-time.
                 </p>
 
-                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
-                <div class="d-flex flex-wrap gap-2">
-                    <span class="badge bg-dark">Figma</span>
-                    <span class="badge bg-dark">VS Code</span>
-                    <span class="badge bg-dark">Flutter</span>
-                    <span class="badge bg-dark">Dart</span>
-                    <span class="badge bg-dark">Firebase</span>
-                </div>
+                <h4><i class="bi bi-check2-square me-2"></i>Jobdesk</h4>
+                <ul>
+                    <li>Mendesain UI/UX aplikasi mobile dengan Flutter, memastikan tampilan responsif dan mudah digunakan.</li>
+                    <li>Merancang dan membangun aplikasi mobile menggunakan Flutter, menghadirkan fungsionalitas sesuai kebutuhan
+                        pengguna.</li>
+                    <li>Mengintegrasikan Firebase untuk backend dan database, mendukung penyimpanan data dan interaksi real-time.</li>
+                </ul>
+
 
             </div>
 
@@ -100,12 +100,29 @@
                     </button>
                 </div>
 
-                <h4><i class="bi bi-check2-square me-2"></i>Jobdesk</h4>
-                <ul>
-                    <li>Mendesain UI/UX aplikasi mobile dengan Flutter, memastikan tampilan responsif dan mudah digunakan.</li>
-                    <li>Merancang dan membangun aplikasi mobile menggunakan Flutter, menghadirkan fungsionalitas sesuai kebutuhan pengguna.</li>
-                    <li>Mengintegrasikan Firebase untuk backend dan database, mendukung penyimpanan data dan interaksi real-time.</li>
-                </ul>
+                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
+                <div class="d-flex flex-wrap gap-2">
+                    <span class="badge bg-dark">Figma</span>
+                    <span class="badge bg-dark">VS Code</span>
+                    <span class="badge bg-dark">Flutter</span>
+                    <span class="badge bg-dark">Dart</span>
+                    <span class="badge bg-dark">Firebase</span>
+                </div>
+                
+                <!-- ===== LINK SECTION ===== -->
+                <!-- <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
+                <div class="d-flex flex-wrap gap-3">
+                    <a href="https://github.com/username/nama-repo" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-github"></i>
+                        GitHub
+                    </a>
+                    <a href="https://youtube.com/your-demo-video" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-play-circle"></i>
+                        Video Demo
+                    </a>
+                </div> -->
 
             </div>
 
