--- a/project_4.html
+++ b/project_4.html
@@ -40,17 +40,13 @@
                     magang, pelatihan, dan kursus, dengan tampilan responsif di desktop maupun perangkat android.
                 </p>
 
-                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
-                <div class="d-flex flex-wrap gap-2">
-                    <span class="badge bg-dark">Figma</span>
-                    <span class="badge bg-dark">VS Code</span>
-                    <span class="badge bg-dark">Bootstrap</span>
-                    <span class="badge bg-dark">Laravel</span>
-                    <span class="badge bg-dark">JavaScript</span>
-                    <span class="badge bg-dark">PHP</span>
-                    <span class="badge bg-dark">CSS</span>
-                    <span class="badge bg-dark">MySQL</span>
-                </div>
+                <h4><i class="bi bi-check2-square me-2"></i>Jobdesk</h4>
+                <ul>
+                    <li>Merancang dan membangun fitur Edukasi dan Karir pada website CV.Natusi berbasis Laravel</li>
+                    <li>Merancang tampilan responsif agar nyaman digunakan di desktop maupun perangkat android.</li>
+                    <li>Melakukan pengujian dan penyesuaian sistem sesuai kebutuhan perusahaan untuk memastikan
+                        fungsionalitas berjalan dengan baik.</li>
+                </ul>
 
             </div>
 
@@ -96,13 +92,32 @@
                     </button>
                 </div>
 
-                <h4><i class="bi bi-check2-square me-2"></i>Jobdesk</h4>
-                <ul>
-                    <li>Merancang dan membangun fitur Edukasi dan Karir pada website CV.Natusi berbasis Laravel</li>
-                    <li>Merancang tampilan responsif agar nyaman digunakan di desktop maupun perangkat android.</li>
-                    <li>Melakukan pengujian dan penyesuaian sistem sesuai kebutuhan perusahaan untuk memastikan
-                    fungsionalitas berjalan dengan baik.</li>
-                </ul>
+                <h4 class="mt-4"><i class="bi bi-code-slash me-2"></i>Tools & Teknologi</h4>
+                <div class="d-flex flex-wrap gap-2">
+                    <span class="badge bg-dark">Figma</span>
+                    <span class="badge bg-dark">VS Code</span>
+                    <span class="badge bg-dark">Bootstrap</span>
+                    <span class="badge bg-dark">Laravel</span>
+                    <span class="badge bg-dark">JavaScript</span>
+                    <span class="badge bg-dark">PHP</span>
+                    <span class="badge bg-dark">CSS</span>
+                    <span class="badge bg-dark">MySQL</span>
+                </div>
+
+                <!-- ===== LINK SECTION ===== -->
+                <!-- <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
+                <div class="d-flex flex-wrap gap-3">
+                    <a href="https://github.com/username/nama-repo" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-github"></i>
+                        GitHub
+                    </a>
+                    <a href="https://youtube.com/your-demo-video" target="_blank"
+                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
+                        <i class="bi bi-play-circle"></i>
+                        Video Demo
+                    </a>
+                </div> -->
 
             </div>
 
