--- a/project_1.html
+++ b/project_1.html
@@ -110,19 +110,21 @@
                 </div>
                 
                 <!-- ===== LINK SECTION ===== -->
-                <!-- <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
-                <div class="d-flex flex-wrap gap-3">
-                    <a href="https://github.com/username/nama-repo" target="_blank"
-                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
-                        <i class="bi bi-github"></i>
-                        GitHub
-                    </a>
-                    <a href="https://youtube.com/your-demo-video" target="_blank"
-                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
-                        <i class="bi bi-play-circle"></i>
-                        Video Demo
-                    </a>
-                </div> -->
+                <h4 class="mt-4">
+                    <i class="bi bi-link-45deg me-2"></i>Link Project
+                </h4>
+                
+                <div class="card bg-dark border-secondary text-light mt-3">
+                    <div class="card-body">
+                        <div class="d-flex align-items-start gap-3">
+                            <i class="bi bi-shield-lock fs-3 text-warning"></i>
+                            <p class="mb-0">
+                                Mohon maaf, kode sumber, dan demo proyek ini tidak dapat dibagikan karena merupakan hak cipta
+                                perusahaan.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
