--- a/project_6.html
+++ b/project_6.html
@@ -108,19 +108,14 @@
                 </div>
 
                 <!-- ===== LINK SECTION ===== -->
-                <!-- <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
+                <h4 class="mt-4"><i class="bi bi-link-45deg me-2"></i>Link Project</h4>
                 <div class="d-flex flex-wrap gap-3">
-                    <a href="https://github.com/username/nama-repo" target="_blank"
+                    <a href="https://github.com/SirRHO/pj_ta.git" target="_blank"
                         class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
                         <i class="bi bi-github"></i>
                         GitHub
                     </a>
-                    <a href="https://youtube.com/your-demo-video" target="_blank"
-                        class="btn btn-outline-secondary d-inline-flex align-items-center gap-2">
-                        <i class="bi bi-play-circle"></i>
-                        Video Demo
-                    </a>
-                </div> -->
+                </div>
             </div>
 
         </div>
