--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             </div>
                             
                             <div class="experience-item">
-                                <strong>Web Deeveloper</strong>
+                                <strong>Web Developer</strong>
                                 <div class="experience-meta">
                                     CV. Natusi • Juni - Agustus 2024
                                 </div>
