--- a/project_1.html
+++ b/project_1.html
@@ -31,7 +31,7 @@
                 <h1 class="mb-3">PENGEMBANGAN APLIKASI IOT PENYIRAMAN OTOMATIS DAN MONITORING TANAMAN BAWANG PREI BERBASIS FLUTTER</h1>
 
                 <p class="text-muted mb-4">
-                    Pengabdian Masyarakat • Desa Kadangan • Android Application
+                    Pengabdian Masyarakat • Desa Kandangan • Android Application
                 </p>
 
                 <h4><i class="bi bi-file-text me-2"></i>Deskripsi</h4>
