--- a/index.html
+++ b/index.html
@@ -351,6 +351,11 @@
                             <img src="img/tools/php.png" alt="PHP">
                             <span>PHP</span>
                         </div>
+
+                        <div class="tool-box">
+                            <img src="img/tools/python.png" alt="Python">
+                            <span>Python</span>
+                        </div>
                     
                         <div class="tool-box">
                             <img src="img/tools/mysql.png" alt="MySQL">
