--- a/index.html
+++ b/index.html
@@ -491,6 +491,18 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Sertifikat 5 -->
+                        <div class="col-md-4">
+                            <div class="card-cert">
+                                <img src="img/sertifikat/foto_5.jpg" class="card-cert-img" data-bs-toggle="modal" data-bs-target="#imageModal"
+                                    data-img="img/sertifikat/foto_5.jpg" alt="Sertifikat 5">
+                                <div class="card-body card-body-light text-center">
+                                    <h5 class="mb-1">Sertifikat Kursus Python</h5>
+                                    <p class="text-muted mb-0">Cisco Networking Academy & Python Institute</p>
+                                </div>
+                            </div>
+                        </div>
                 
                     </div>
                 </div>
