--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="profil-wrapper">
                 <!-- FOTO -->
                 <div class="profil-foto">
-                    <img src="img/photo.jpg" alt="Foto Profil">
+                    <img src="img/photo.png" alt="Foto Profil">
                 </div>
         
                 <!-- KONTEN -->
